--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -134,3 +134,102 @@ body {
 }
 
 /* Aqui termina o index.html */
+
+/* Aqui começa o login.html */
+
+.login {
+    height: 570px;
+    width: 100%;
+    background-image: url(../assets/imgs/bg-jelly-fish-para_outras_pags.png);
+    background-size:cover;
+}
+
+.login .container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login .container .card {
+    background-color: #dcdcdc;
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    flex-direction: column; 
+}
+
+.card-login {
+    height: 230px;
+    width: 520px;
+    border-radius: 7px;
+    color: #ed145c8f;
+}
+
+.card-login h2 {
+    margin: 0;
+    margin-top: 20px;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start ;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.campo {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-weight: bold;
+}
+
+.campo span {
+    font-size: smaller;
+    font-weight: bolder;
+}
+
+input {
+    height: 35px;
+    width: 420px;
+    border-radius: 7px;
+    border-color: #32b9cd;
+    border-style: solid;
+    margin-bottom: 5px;
+}
+
+input::placeholder {
+    text-align: center;
+    font-size: 14px;
+}
+
+.botao {
+    align-self: center;
+    background-color: #ed145b;
+    color: white;
+    font-weight: bold;
+    font-size: small;
+    margin-top: 15px;
+    border-radius: 5px;
+    border-width: 0;
+    height: 30px;
+    width: 130px;
+}
+
+
+/* cadastro.html */
+.card-cadastro {
+    width: 520px;
+    height: 420px;
+    border-radius: 7px;
+    color: #ed145c8f;
+}
+
+.card-cadastro h2 {
+    margin: 0;
+    margin-top: 15px;
+}
